infrastructure/environments/fast-dev/aws/us/cluster/namespaces/hello-world/manifests/virtualservice.yml
apiVersion: networking.istio.io/v1 
kind: VirtualService
metadata:
  name: home
  namespace: hello-world
spec:
  hosts:
  - hello.fast.dev.wescaleout.cloud
  - hello.us.fast.dev.wescaleout.cloud
  - hello.aws.fast.dev.wescaleout.cloud
  - hello.aws-us.fast.dev.wescaleout.cloud
  gateways:
  - ingress/north-south
  http:
  - route:
    - destination:
        host: home.hello-world.svc.cluster.local
        port:
          number: 80
